# GlassShare

./: .gitignore  LICENSE  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: android-build.yml  linux-build.yml  publish-release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/glassshare/mobile/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/: index-CNf0jY5H.js
electron/: main.cjs  preload.cjs
public/: manifest.json  sw.js
server/: index.js  package-lock.json  package.json
src/: main.js  qr.js  style.css  visualizer.js  wakelock.js  webrtc.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
