[package]
name = "glassshare"
version = "1.2.0"
description = "GlassShare - Local File Sharing"
authors = ["ShadowMan2010"]
license = "MIT"
repository = "https://github.com/ShadowMan2010/GlassShare"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
pnet = "0.34"
